# openapi.json
@@ -91,6 +91,37 @@
         }
       }
     },
+    "/v1/auth/did-create": {
+      "post": {
+        "operationId": "authDidCreate",
+        "summary": "Creates a new DSNP Identity with DID",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateIdentityWithDidRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreateIdentityResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/auth/create": {
       "post": {
         "operationId": "authCreate",
@@ -747,6 +778,56 @@
           "expires",
           "accessToken",
           "dsnpId"
+        ]
+      },
+      "CreateIdentityWithDidRequest": {
+        "type": "object",
+        "properties": {
+          "algo": {
+            "type": "string",
+            "enum": [
+              "SR25519"
+            ]
+          },
+          "baseHandle": {
+            "type": "string"
+          },
+          "encoding": {
+            "type": "string",
+            "enum": [
+              "hex"
+            ]
+          },
+          "identifier": {
+            "type": "string"
+          },
+          "proof": {
+            "type": "object",
+            "properties": {
+              "merkleLeaves": {
+                "type": "object", 
+                "properties": {
+                  "blinded": {
+                    "type": "array"
+                  },
+                  "revealed": {
+                    "type": "array"
+                  }
+                } 
+              },
+              "didSignature": { "type": "array"}
+            }
+          },
+          "expiration": {
+            "type": "number"
+          },
+          "handleSignature": { "type": "string"}
+        },
+        "required": [
+          "algo",
+          "baseHandle",
+          "encoding",
+          "expiration"
         ]
       },
       "CreateIdentityRequest": {
